@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Prevent freeze on C-FIND if no DICOM tag is to be returned
+* Fix issue 30 (QR response missing "Query/Retrieve Level" (008,0052))
 
 
 Version 0.8.6 (2015/02/12)
